details page design

--- a/work.html
+++ b/work.html
@@ -123,7 +123,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -157,7 +157,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -174,7 +174,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -191,7 +191,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -211,7 +211,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -228,7 +228,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -245,7 +245,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -262,7 +262,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -279,7 +279,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -300,7 +300,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -317,7 +317,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -334,7 +334,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -351,7 +351,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -368,7 +368,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -389,7 +389,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -406,7 +406,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -423,7 +423,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -440,7 +440,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
@@ -457,7 +457,7 @@
                                     <div class="project_info">
                                         <span class="p_type">Project Type</span>
                                         <h3 class="project_name">Project Name</h3>
-                                        <a href="#" class="v_project">
+                                        <a href="details.html" class="v_project">
                                             view more
                                             <img src="assets/images/Arrow-icon.png" alt="arrow_icon">
                                         </a>
