--- a/details.html
+++ b/details.html
@@ -112,7 +112,7 @@
     <section id="project_area">
         <div class="container">
             <div class="row">
-                <div class="col-md-9 offset-md-3">
+                <div class="col-md-12 col-xl-9 col-lg-9 offset-lg-3 offset-xl-3">
                     <div class="project_title_2">
                         <h2>About projects</h2>
                     </div>
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div class="row mt-100">
-                <div class="col-md-3 offset-md-3">
+                <div class=" col-md-6 col-xl-3 offset-xl-3 col-lg-3 offset-lg-3">
                     <div class="our_role">
                         <ul>
                             <h4>Our Role</h4>
@@ -145,7 +145,7 @@
                             <li>Front end</li>
                         </ul>
                     </div>
-                    <div class="our_role mb-50">
+                    <div class="our_role">
                         <ul>
                             <h4>Tools Used</h4>
                             <li>note js</li>
@@ -154,7 +154,7 @@
                             <li>Blender</li>
                         </ul>
                     </div>
-                    <div class="our_role mb-50">
+                    <div class="our_role">
                         <ul>
                             <h4>project length</h4>
                             <li>11 Month</li>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="our_role_img">
-                        <img src="assets/images/ww.jpg" alt="images" class=" img-fluid">
+                        <img src="assets/images/ww.jpg" alt="images">
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
     <!-- details project section end -->
 
     <!-- project-name area section end -->
-    <section id="details-project">
+    <section id="details_project">
         <div class="container">
             <div class="row align-items-center mb-100">
                 <div class="col-4">
