--- a/career.html
+++ b/career.html
@@ -43,9 +43,9 @@
                   <div class="main-menu">
                     <ul>
                       <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
+                      <li> <a href="about.html"> <span>02</span> About </a> </li>
                       <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html"> <span>04</span> Career </a> </li>
+                      <li> <a href="career.html" class="active"> <span>04</span> Career </a> </li>
                       <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
                     </ul>
                   </div>
