--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
               <li class="nav_items"><a href="index.html">Home</a></li>
               <li class="nav_items"><a href="about.html">About</a></li>
               <li class="nav_items"><a href="work.html">work</a></li>
-              <li class="nav_items"><a href="#">Career</a></li>
+              <li class="nav_items"><a href="career.html">Career</a></li>
               <li class="nav_items"><a href="join-us.html">Contact</a></li>
             </ul>
           </div>
