--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                   </div>
                   <div class="main-menu">
                     <ul>
-                      <li> <a href="index.html"> <span>01</span> Home </a> </li>
-                      <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
+                      <li> <a href="index.html" class="active" > <span>01</span> Home </a> </li>
+                      <li> <a href="about.html"> <span>02</span> About </a> </li>
                       <li> <a href="work.html"> <span>03</span> Work </a> </li>
                       <li> <a href="career.html"> <span>04</span> Career </a> </li>
                       <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
@@ -567,7 +567,7 @@
                 <li class="nav_items"><a href="index.html">Home</a></li>
                 <li class="nav_items"><a href="about.html">About</a></li>
                 <li class="nav_items"><a href="work.html">work</a></li>
-                <li class="nav_items"><a href="#">Career</a></li>
+                <li class="nav_items"><a href="career.html">Career</a></li>
                 <li class="nav_items"><a href="join-us.html">Contact</a></li>
               </ul>
             </div>
