working on banner

--- a/about.html
+++ b/about.html
@@ -256,7 +256,7 @@
             <span>Quick Links</span>
             <ul class="nav_links">
               <li class="nav_items"><a href="index.html">Home</a></li>
-              <li class="nav_items"><a href="about.html">About</a></li>
+              <li class="nav_items"><a href="about.html" class="active">About</a></li>
               <li class="nav_items"><a href="work.html">work</a></li>
               <li class="nav_items"><a href="#">Career</a></li>
               <li class="nav_items"><a href="join-us.html">Contact</a></li>
