--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                       <li> <a href="about.html" class="active"> <span>02</span> About </a> </li>
                       <li> <a href="work.html"> <span>03</span> Work </a> </li>
                       <li> <a href="career.html"> <span>04</span> Career </a> </li>
-                      <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
+                      <li> <a href="contact.html" class="active"> <span>05</span> Contact </a> </li>
                     </ul>
                   </div>
                 </div>
