--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 
     <!-- banner section start -->
     <section id="banner" class="none">
+      <!-- shaddow round img -->
+      <div class="round_shape_img">
+        <img src="assets/images/Shadow.png" alt="shaddow_ibackground">
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-xl-7 order-2 order-xl-0">
@@ -103,6 +107,7 @@
         <div class="row section_title">
           <h2>our Work</h2>
         </div>
+        
         <div class="row project_slider">
           <div class="slide_item col-12">
             <div class="col-4">
@@ -160,90 +165,6 @@
                 <img
                   src="assets/images/project-img/img-7.png"
                   alt="project-img"
-<<<<<<< HEAD
-=======
-                />
-              </div>
-            </div>
-          </div>
-          <div class="slide_item col-12">
-            <div class="col-4">
-              <div class="slide_info">
-                <span class="p_type">Project type</span>
-                <h3 class="p_title">Project name</h3>
-                <a class="v_project" href="#">
-                  <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
-                </a>
-              </div>
-            </div>
-            <div class="col-8">
-              <div class="project_img">
-                <img
-                  src="assets/images/project-img/img-7.png"
-                  alt="project-img"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="slide_item col-12">
-            <div class="col-4">
-              <div class="slide_info">
-                <span class="p_type">Project type</span>
-                <h3 class="p_title">Project name</h3>
-                <a class="v_project" href="#">
-                  <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
-                </a>
-              </div>
-            </div>
-            <div class="col-8">
-              <div class="project_img">
-                <img
-                  src="assets/images/project-img/img-7.png"
-                  alt="project-img"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="slide_item col-12">
-            <div class="col-4">
-              <div class="slide_info">
-                <span class="p_type">Project type</span>
-                <h3 class="p_title">Project name</h3>
-                <a class="v_project" href="#">
-                  <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
-                </a>
-              </div>
-            </div>
-            <div class="col-8">
-              <div class="project_img">
-                <img
-                  src="assets/images/project-img/img-7.png"
-                  alt="project-img"
-                />
-              </div>
-            </div>
-          </div>
-          <!-- <div class="slide_item col-12">
-            <div class="col-4">
-              <div class="slide_info">
-                <span class="p_type">Project type</span>
-                <h3 class="p_title">Project name</h3>
-                <a class="v_project" href="#">
-                  <span>View Project</span>
-                  <img src="assets/images/Arrow-icon.png" alt="project-img" />
-                </a>
-              </div>
-            </div>
-            <div class="col-8">
-              <div class="project_img">
-                <img
-                  src="assets/images/project-img/img-7.png"
-                  alt="project-img"
-                  class="img-fluid"
->>>>>>> 4ad76948eeb31f681fe909d31721239cf80494d3
                 />
               </div>
             </div>
@@ -328,7 +249,7 @@
                 />
               </div>
             </div>
-          </div> -->
+          </div> 
         </div>
         <h4 class="drag_text">Drag</h4>
       </div>
@@ -564,8 +485,8 @@
             <div class="footer_menu">
               <span>Quick Link</span>
               <ul class="nav_links">
-                <li class="nav_items"><a href="index.html">Home</a></li>
-                <li class="nav_items"><a href="about.html">About</a></li>
+                <li class="nav_items" ><a href="index.html" class="active">Home</a></li>
+                <li class="nav_items"><a href="about.html" >About</a></li>
                 <li class="nav_items"><a href="work.html">work</a></li>
                 <li class="nav_items"><a href="#">Career</a></li>
                 <li class="nav_items"><a href="join-us.html">Contact</a></li>
