--- a/work.html
+++ b/work.html
@@ -488,7 +488,7 @@
                         <ul class="nav_links">
                             <li class="nav_items"><a href="index.html">Home</a></li>
                             <li class="nav_items"><a href="about.html">About</a></li>
-                            <li class="nav_items"><a href="work.html">work</a></li>
+                            <li class="nav_items"><a href="work.html" class="active">work</a></li>
                             <li class="nav_items"><a href="#">Career</a></li>
                             <li class="nav_items"><a href="join-us.html">Contact</a></li>
                         </ul>
