working left on some responsive and img

--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@
 
   <!-- about-us section start -->
   <section id="about" class="none">
+    
     <div class="container">
       <div class="row section_title">
         <h2>About us</h2>
@@ -120,7 +121,12 @@
         </div>
       </div>
     </div>
+    <div class="round_shape_img">
+      <img src="assets/images/Shadow.png" alt="shaddow_ibackground">
+    </div>
   </section>
+
+
   <!-- about-us 2 section end -->
   <section id="about_content_2" class="none">
     <div class="container">
