--- a/details.html
+++ b/details.html
@@ -73,7 +73,7 @@
 
 
     <!-- details slider section start -->
-    <section id="details_slier">
+    <section id="details_slider">
         <div class="container">
             <div class="row">
                 <div class="col-12">
